data/lummopages-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: tokko-lummopages-web # kpt-set: ${service-name}
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
  selector:
    app: tokko-lummopages-web # kpt-set: ${service-name}
