data/lummopages-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tokko-lummopages-web
spec:
  entryPoints:
    - websecure
  routes:
    - match: 'Host(`lummo.buzz`) || Host(`www.lummo.buzz`) && PathPrefix(`/`)' # kpt-set: ${rule}
      kind: Rule
      priority: 10
      services:
        - name: tokko-lummopages-web # kpt-set: ${service-name}
          port: 3000 # kpt-set: ${service-port}
  tls:
    secretName: tokko-lummopages-web-cert
